ingress-manifests/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ui.evils.in
    http:
      paths:
      - path: /
        backend:
          serviceName: mshs
          servicePort: 9000
  - host: apiprod.evils.in
    http:
      paths:
      - path: /
        backend:
          serviceName: rmphs
          servicePort: 9001
  - host: apims.evils.in
    http:
      paths:
      - path: /
        backend:
          serviceName: mshs
          servicePort: 8080
